profilelist1exp/unpackaged/objects/MonitorAsyncApexJob__c.object
<CustomObject>
    <description>AsyncApexJob custom object. Retrieve data from AsyncApexJob</description>
    <fields>
        <fullName>ApexClassID__c</fullName>
        <label>Apex Class ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApexJobCompletionDate__c</fullName>
        <label>Apex Job Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApexJobCreatedDate__c</fullName>
        <label>Apex Job Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ApexJobID__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobType__c</fullName>
        <label>Job Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfErrors__c</fullName>
        <label>Failures</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>MonitorAsyncApexJob</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JobType__c</columns>
        <columns>ApexJobCreatedDate__c</columns>
        <columns>ApexJobCompletionDate__c</columns>
        <columns>Status__c</columns>
        <columns>NumberOfErrors__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MonitorAsyncApexJob Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MonitorAsyncApexJob</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>